2012-11-09  Raphael Kubo da Costa  <raphael.kubo.da.costa@intel.com>

        [EFL][DRT] Force a repaint before tracking repaint rects.
        https://bugs.webkit.org/show_bug.cgi?id=101743

        Reviewed by Kenneth Rohde Christiansen.

        Do like other ports and force a repaint before we start tracking
        repaints so that the pixel results generated look more in line
        with what's expected.

        * DumpRenderTree/efl/DumpRenderTree.cpp:
        (displayWebView): Call DRTSupport::forceLayout() before start
        tracking repaints.

2012-11-09  Xiaobo Wang  <xbwang@torchmobile.com.cn>

        [BlackBerry] DRT - eventSender.keyDown() needs to support pageUp, pageDown, home, end key
        https://bugs.webkit.org/show_bug.cgi?id=100937

        Reviewed by Rob Buis.

        1. Translate these keys to their corresponding BlackBerry key code.
        2. Break down a KeyChar event to a KeyDown/KeyUp pair. This is required
        because we only handle scrolling on a KeyDown event in WebPage::keyEvent()
        , and internally a KeyChar event is interpreted as a KeyDown event + a
        KeyUp event in InputHandler::handleKeyboardInput().

        Tests fixed:
        1. editing/input/scroll-viewport-page-up-down.html
        2. editing/selection/move-begin-end.html
        3. fast/forms/select-popup-pagekeys.html

        * DumpRenderTree/blackberry/EventSender.cpp:
        (keyDownCallback):

2012-11-09  Simon Hausmann  <simon.hausmann@digia.com>

        Unreviewed prospective Qt/Windows build bot fix:

        Make determination of qmake mkspec work with older versions of Qt that
        still create a "mkspecs/default" directory.

        * Scripts/webkitdirs.pm:
        (qtMakeCommand):

2012-11-09  Jochen Eisinger  <jochen@chromium.org>

        [chromium] Introduce a WebTestProxy to override methods in WebViewClient for layout tests
        https://bugs.webkit.org/show_bug.cgi?id=101452

        Reviewed by Adam Barth.
