@@ -1,3 +1,15 @@
+2012-11-09  Dominik Röttsches  <dominik.rottsches@intel.com>
+
+        webkitpy/layouttests integration test fails if high shards/processes environment variables are used
+        https://bugs.webkit.org/show_bug.cgi?id=101455
+
+        Reviewed by Dirk Pranke.
+
+        Updating test to disregard WEBKIT_TEST_MAX_LOCKED_SHARDS environment variable.
+
+        * Scripts/webkitpy/layout_tests/run_webkit_tests_integrationtest.py:
+        (MainTest.test_max_locked_shards):
+
 2012-11-09  Raphael Kubo da Costa  <raphael.kubo.da.costa@intel.com>
 
         [EFL][DRT] Force a repaint before tracking repaint rects.
